--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
   </div>
 
   <div id="work" class="border-l-2 border-gray-300 dark:border-gray-600 pl-6 space-y-10">
+    <!-- Samsung (Samsung Experience Consultant) -->
     <div class="relative">
       <span class="absolute -left-3 top-1 w-3 h-3 bg-gray-800 rounded-full border-2 border-white dark:border-gray-900"></span>
       <div class="mb-1 text-sm text-gray-500 dark:text-gray-400">Jan 2022 - Present</div>
@@ -145,6 +146,21 @@
         <li>Provided technical support for computers, printers, and peripherals.</li>
       </ul>
     </div>
+
+    <!-- 2020Companies (Sales Samsung Experience Consultant) -->
+    <div class="relative">
+      <span class="absolute -left-3 top-1 w-3 h-3 bg-gray-800 rounded-full border-2 border-white dark:border-gray-900"></span>
+      <div class="mb-1 text-sm text-gray-500 dark:text-gray-400">Aug 10, 2022 - Jan 15, 2025</div>
+      <h3 class="text-xl font-semibold">2020Companies <span class="text-sm font-normal text-gray-400">(Sales Samsung Experience Consultant)</span></h3>
+      <ul class="list-disc ml-5 mt-2 space-y-1 text-gray-700 dark:text-gray-300">
+        <li>Managed revenue growth, metrics, and 30/60/90 plans.</li>
+        <li>Collaborated with Samsung, 2020Companies, and BestBuy CEOs.</li>
+        <li>Maintained a 95% goal minimum, achieving #1 in the U.S.</li>
+        <li>Attended exclusive Samsung events as a top performer.</li>
+      </ul>
+    </div>
+
+    <!-- BestBuy (Geek Squad Agent) -->
     <div class="relative">
       <span class="absolute -left-3 top-1 w-3 h-3 bg-gray-800 rounded-full border-2 border-white dark:border-gray-900"></span>
       <div class="mb-1 text-sm text-gray-500 dark:text-gray-400">Oct 2020 - Jan 2022</div>
